[gd_scene load_steps=28 format=3 uid="uid://lns6rbjij21u"]

[ext_resource type="PackedScene" uid="uid://butgp5an44sx3" path="res://scenes/reeling.tscn" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://cugs50pw3qyh6" path="res://scripts/game.gd" id="1_yqjtg"]
[ext_resource type="Texture2D" uid="uid://bk4eki3g7hw35" path="res://assets/images/BG.png" id="2_lbhrr"]
[ext_resource type="Texture2D" uid="uid://bkufwd2l7fdkr" path="res://assets/images/Fisher.png" id="4_p57ef"]
[ext_resource type="PackedScene" uid="uid://bkpj5sgb68nia" path="res://scenes/quiz.tscn" id="5_iywne"]
[ext_resource type="PackedScene" uid="uid://o6atvsod0sci" path="res://scenes/catch_result.tscn" id="6_p57ef"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u5sy4"]
atlas = ExtResource("4_p57ef")
region = Rect2(1548, 0, 774, 773)

[sub_resource type="AtlasTexture" id="AtlasTexture_gee14"]
atlas = ExtResource("4_p57ef")
region = Rect2(0, 1546, 774, 773)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtaks"]
atlas = ExtResource("4_p57ef")
region = Rect2(0, 773, 774, 773)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvpfn"]
atlas = ExtResource("4_p57ef")
region = Rect2(774, 773, 774, 773)

[sub_resource type="AtlasTexture" id="AtlasTexture_dinhu"]
atlas = ExtResource("4_p57ef")
region = Rect2(1548, 773, 774, 773)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvuet"]
atlas = ExtResource("4_p57ef")
region = Rect2(0, 0, 774, 773)

[sub_resource type="AtlasTexture" id="AtlasTexture_trtic"]
atlas = ExtResource("4_p57ef")
region = Rect2(1548, 0, 774, 773)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir15t"]
atlas = ExtResource("4_p57ef")
region = Rect2(0, 2319, 774, 773)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca42v"]
atlas = ExtResource("4_p57ef")
region = Rect2(0, 0, 774, 773)

[sub_resource type="AtlasTexture" id="AtlasTexture_rysoc"]
atlas = ExtResource("4_p57ef")
region = Rect2(774, 0, 774, 773)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssvqc"]
atlas = ExtResource("4_p57ef")
region = Rect2(1548, 0, 774, 773)

[sub_resource type="AtlasTexture" id="AtlasTexture_264po"]
atlas = ExtResource("4_p57ef")
region = Rect2(2322, 0, 774, 773)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kice"]
atlas = ExtResource("4_p57ef")
region = Rect2(2322, 0, 774, 773)

[sub_resource type="SpriteFrames" id="SpriteFrames_yqjtg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5sy4")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_gee14")
}],
"loop": true,
"name": &"fail",
"speed": 2.0
}, {
"frames": [{
"duration": 15.0,
"texture": SubResource("AtlasTexture_vtaks")
}],
"loop": true,
"name": &"reeling1",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvpfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dinhu")
}],
"loop": true,
"name": &"reeling2",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvuet")
}],
"loop": true,
"name": &"still",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_trtic")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_ir15t")
}],
"loop": true,
"name": &"succeed",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca42v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rysoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssvqc")
}, {
"duration": 18.0,
"texture": SubResource("AtlasTexture_264po")
}],
"loop": true,
"name": &"throwing",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kice")
}],
"loop": true,
"name": &"waiting",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_bt5mj"]
resource_name = "fail"

[sub_resource type="Animation" id="Animation_5newe"]
resource_name = "reeling"

[sub_resource type="Animation" id="Animation_ssvqc"]
resource_name = "still"

[sub_resource type="Animation" id="Animation_37s47"]
resource_name = "succeed"

[sub_resource type="Animation" id="Animation_264po"]
resource_name = "throwing"

[sub_resource type="Animation" id="Animation_1kice"]
resource_name = "waiting"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e1j6l"]
_data = {
&"fail": SubResource("Animation_bt5mj"),
&"reeling": SubResource("Animation_5newe"),
&"still": SubResource("Animation_ssvqc"),
&"succeed": SubResource("Animation_37s47"),
&"throwing": SubResource("Animation_264po"),
&"waiting": SubResource("Animation_1kice")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_yqjtg")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_lbhrr")

[node name="FisherDude" type="AnimatedSprite2D" parent="."]
position = Vector2(549, 539)
sprite_frames = SubResource("SpriteFrames_yqjtg")
animation = &"fail"
frame_progress = 0.9885282

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_e1j6l")
}

[node name="Timer" type="Timer" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="LowOpacityBg" type="ColorRect" parent="UILayer"]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0.16470589, 0.34901962, 0.49803922)

[node name="PopupLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Reeling" parent="PopupLayer" instance=ExtResource("1_uwrxv")]
visible = false
position = Vector2(960, 540)

[node name="Quiz" parent="PopupLayer" instance=ExtResource("5_iywne")]
visible = false

[node name="CatchResult" parent="PopupLayer" instance=ExtResource("6_p57ef")]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
offset_left = -960.0
offset_top = -504.0
offset_right = -960.0
offset_bottom = -504.0
grow_horizontal = 0
grow_vertical = 0
